# sma-energy-tracker

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  db_init.py  docker-compose.override.yml.example  docker-compose.yml  download_vendors.py  pyproject.toml  requirements-dev.txt  requirements.txt  sma_client.py  sma_poller.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: sma-setup.md
static/: index.html  script.js  styles.css
tests/: conftest.py  test_app.py  test_db_init.py  test_sma_client.py  test_sma_poller.py
